[package]
name = "ms-executor-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
protos = { path = "../protos"}
axum = {  version = "0.6.1" }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
prost = "0.11.5"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8.3" }
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }