[package]
name = "ms-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = {version = "1.2.2", features = ["v4"]}
futures = "0.3"
protos = { path = "../protos"}
tokio = { version = "1.23.0", features = ["full"] }
hyper = { version = "1.0.0-rc.1", features = ["full"] }
http-body-util = "0.1.0-rc.1"
tonic = "0.8.3"