[package]
name = "ms-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = { version = "*", default-features = false }
uuid = {version = "1.10.0", features = ["v4"]}
futures = "0.3"
protos = { path = "../protos"}
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["full"] }
tonic = "0.12.0"
